fix for input on iphone

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,11 +16,13 @@ body, html {
 
 .wrapperForm {
   margin: 5rem auto 2rem;
+  display: flex;
 }
 
 .search {
   outline: none;
   border-radius: 0;
+  margin-right: 5px;
 
   &[type=search] {
     -webkit-appearance: textfield;
